# hooker

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  config.ru  docker-compose.yml  routes.md  sidekiq.ru  unicorn.rb
app/: discord_hooks.rb  gitlab_hooks.rb  main.rb  notification_worker.rb  objectified_hash.rb
spec/: discord_hook_spec.rb  gitlab_hook_spec.rb  spec_helper.rb
spec/fixtures/: gl_issue_close.json  gl_issue_open.json  gl_mr_close.json  gl_mr_merge.json  gl_mr_open.json  gl_pipeline_failed.json  gl_pipeline_success.json  gl_push.json
src/: http.rs  main.rs  models.rs  router.rs  routes.rs  store.rs
src/models/: discord.rs  gitlab.rs
src/routes/: api.rs  hooks.rs
tests/data/: issue_closed_event.json  issue_opened_event.json  mr_closed_event.json  mr_merged_event.json  mr_opened_event.json  push_event.json
