[package]
name = "hooker"
version = "2.0.0"
edition = "2018"
publish = false
include = [
    "src/**/*.rs",
    "tests/**/*",
]


[dependencies]
log = "0.4"
simplelog = "0.9"
base64 = "0.13"
sha2 = "0.9"
hex = "0.4"
bytes = "1.0"
async-trait = "0.1"
matchit = "0.2"
serde_json = "1.0"
argh = "0.1"
anyhow = "1.0"
hyper-rustls = "0.22"

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.hyper]
version = "0.14"
features = ["server", "client", "tcp", "http1", "http2"]


[profile.release]
lto = "fat" # "thin"
